添加CLI工具加密/解密

--- a/src/client/styles/password-modal.scss
+++ b/src/client/styles/password-modal.scss
@@ -192,24 +192,23 @@
   }
 }
 
-// .vp-decrypt-submit {
-//   @include reset.button;
+ .vp-decrypt-submit {
 
-//   width: 70px;
-//   margin-top: 1.5rem;
-//   border-width: 0;
-//   border-radius: 0.5rem;
+   width: 70px;
+   margin-top: 1.5rem;
+   border-width: 0;
+   border-radius: 0.5rem;
 
-//   background: var(--vp-c-accent-bg);
-//   color: var(--vp-c-text);
-//   outline: none;
+   background: var(--vp-c-accent-bg);
+   color: var(--vp-c-text);
+   outline: none;
 
-//   font-size: 1.2rem;
-//   line-height: 2;
+   font-size: 1.2rem;
+   line-height: 2;
 
-//   transition: color var(--vp-t-color);
+   transition: color var(--vp-t-color);
 
-//   &:hover {
-//     background: var(--vp-c-accent-hover);
-//   }
-// }
+   &:hover {
+     background: var(--vp-c-accent-hover);
+   }
+ }
