--- a/src/client/styles/password-modal.scss
+++ b/src/client/styles/password-modal.scss
@@ -1,4 +1,3 @@
-// @use "vuepress-shared/styles/reset";
 
 @keyframes shake {
   0%,
@@ -44,6 +43,8 @@
 }
 
 .vp-decrypt-layer {
+  z-index: 99;
+  position: relative;
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -70,15 +71,15 @@
 
   transition: box-shadow var(--vp-t-color);
 
-//   @media (max-width: hope-config.$tablet) {
-//     width: calc(100% - 5rem);
-//     padding: 1.5rem;
-//   }
+   @media (max-width: 959px) {
+     width: calc(100% - 5rem);
+     padding: 1.5rem;
+   }
 
-//   @media (max-width: hope-config.$mobile) {
-//     width: calc(100% - 3rem);
-//     box-shadow: none;
-//   }
+   @media (max-width: 480px) {
+     width: calc(100% - 3rem);
+     box-shadow: none;
+   }
 }
 
 .vp-decrypt-hint {
@@ -192,23 +193,4 @@
   }
 }
 
- .vp-decrypt-submit {
 
-   width: 70px;
-   margin-top: 1.5rem;
-   border-width: 0;
-   border-radius: 0.5rem;
-
-   background: var(--vp-c-accent-bg);
-   color: var(--vp-c-text);
-   outline: none;
-
-   font-size: 1.2rem;
-   line-height: 2;
-
-   transition: color var(--vp-t-color);
-
-   &:hover {
-     background: var(--vp-c-accent-hover);
-   }
- }
